# hs_learning

./: CHANGELOG.md  hs-learning.cabal
app/: Main.hs  Second.hs
